# outreach-system

./: .gitignore  Makefile  README.md  gmail_oauth.py  main.py  pyproject.toml
.github/scripts/: setup.py  setup.sh
.github/workflows/: daily_outreach.yml
src/outreach/: config.py  email_generator.py  follow_up.py  gmail_sender.py  main.py  scraper.py  sheets_manager.py  warmup.py
